--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -27,35 +27,35 @@
                           <div class="dropdown-menu-full">
                             <a routerLink="/services/user-experience" title="UX Consulting">
                               <div class="step-icon">
-                              <img src="/assets/images/home/icon-1.png" />
+                              <img src="/assets/images/home/user-experience.svg" />
                               </div>
                               <span>USER EXPERIENCE</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/interface-design" title="Interface Design">
                               <div class="step-icon">
-                              <img src="/assets/images/home/icon-2.png" />
+                              <img src="/assets/images/home/interface-design.svg" />
                               </div>
                               <span>INTERFACE DESIGN</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/ui-dev" title="UI Development">
                               <div class="step-icon">
-                              <img src="/assets/images/home/icon-3.png" />
+                              <img src="/assets/images/home/ui-dev.svg" />
                               </div>
                               <span>UI DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/end-to-end" title="End-to-End Development">
                               <div class="step-icon">
-                              <img src="/assets/images/home/icon-4.png" />
+                              <img src="/assets/images/home/end-to-end.svg" />
                               </div>
                               <span>END TO END DEVELOPMENT</span>
                             </a>
                             <span class="seperator">&nbsp;</span>
                             <a routerLink="/services/usability-testing" title="Usability Testing">
                               <div class="step-icon">
-                              <img src="/assets/images/home/icon-5.png" />
+                              <img src="/assets/images/home/usability-testing.svg" />
                               </div>
                               <span>USABILITY TESTING</span>
                             </a>
