--- a/src/app/components/projects/child-care/child-care.component.html
+++ b/src/app/components/projects/child-care/child-care.component.html
@@ -18,7 +18,7 @@
  <!-- image -->
 <div class="image">
   <div class="step-image">
-    <img src="/assets/images/projects/child-care/child-care.png" />
+    <img src="/assets/images/projects/child-care/child-care.jpg" />
   </div>
 </div>
  <!-- image -->
