--- a/src/app/components/projects/health/health.component.html
+++ b/src/app/components/projects/health/health.component.html
@@ -189,7 +189,7 @@
   <!-- Vegetable image -->
   <div class="veg-image">
     <div class="step-image">
-      <img src="/assets/images/projects/health/veg.jpg" />
+      <img src="/assets/images/projects/health/veg.png" />
     </div>
   </div>
    <!-- Vegetable image -->
