--- a/src/app/components/projects/projects.component.html
+++ b/src/app/components/projects/projects.component.html
@@ -10,7 +10,7 @@
         <div class="row space">
             <div class="col-md-4">
                 <div class="step-image" routerLink="/projects/event-management">
-                    <img src="/assets/images/projects/project1.png" alt="Case Study"/>
+                    <img src="/assets/images/projects/project1.jpg" alt="Case Study"/>
                     <div class="text-hover">
                         <h4>Event Management</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
@@ -19,7 +19,7 @@
             </div>
             <div class="col-md-4">
                 <div class="step-image" routerLink="/projects/networking">
-                    <img src="/assets/images/projects/project2.png" alt="Case Study"/>
+                    <img src="/assets/images/projects/project2.jpg" alt="Case Study"/>
                     <div class="text-hover">
                         <h4>Network Scalability</h4>
                         <h6>Read Case Study <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
@@ -28,7 +28,7 @@
             </div>
             <div class="col-md-4">
                 <div class="step-image" routerLink="/projects/skill-development">
-                    <img src="/assets/images/projects/project3.png" alt="Case Study"/>
+                    <img src="/assets/images/projects/project3.jpg" alt="Case Study"/>
                     <div class="text-hover">
                         <h4>Skill Development</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
@@ -39,7 +39,7 @@
         <div class="row ">
             <div class="col-md-4">
                 <div class="step-image" routerLink="/projects/social-review">
-                    <img src="/assets/images/projects/project4.png" alt="Case Study"/>
+                    <img src="/assets/images/projects/project4.jpg" alt="Case Study"/>
                     <div class="text-hover">
                         <h4>Social Marketing</h4>
                         <h6>Read Case Study  <fa-icon [icon]="['fas','chevron-right']"></fa-icon></h6>
