--- a/src/app/components/services/back-end-development/back-end-development.component.html
+++ b/src/app/components/services/back-end-development/back-end-development.component.html
@@ -19,14 +19,16 @@
           </div>
           <div class="row spacing">
               <div class="col-md-6">
-                  <h5>UNDERSTANDING THE SYSTEM</h5>
+                <span class="highlight1">UNDERSTANDING THE </span>
+                  <h5>SYSTEM</h5>
                   <p>We draw the System Roadmap based on the Design Strategy for a better Usability. In this approach we have a clear roadmap that encompasses multiple factors like Defined User Base, quantum & type of data. 
                     This set-up allows the well defined ecosystem to boost the performance, enhance scalability to alignment with the Product Vision, also get started with minimal fuss.
                 </p>
               </div>
-              <div class="col-md-6">
+              <div class="col-md-1"></div>
+              <div class="col-md-5">
                 <div class="step-image2">
-                  <img src="/assets/images/services/bd1.svg" alt="" />
+                  <img src="/assets/images/services/end-to-end/image-2.svg" alt="" />
               </div>
               </div>
           </div>
@@ -81,24 +83,26 @@
 <div class="service-step3">
   <div class="container">
       <div class="row">
-        <div class="col-md-6 m-first">
+        <div class="col-md-5 m-first">
          <h5>IMPLEMENTATION</h5>
           <p>We define the stubs in correlation with the Interface needs with scope for future enhancements with minimal changes. The API driven development allows us to integrate with multiple platforms and services in agile mode.
              We manage the code via Git repositories for a hassle free hand-over and deployment. 
           </p>
       </div>
-          <div class="col-md-6 m-last">
-            <div class="step-image image">
-              <img src="/assets/images/services/bd3.svg" alt="" />
+      <div class="col-md-1"></div>
+          <div class="col-md-5 m-last">
+            <div class="step-image">
+              <img src="/assets/images/services/end-to-end/image-3.svg" alt="" />
           </div>
           </div>
       </div>
       <div class="row">
-          <div class="col-md-6 m-last">
-            <div class="step-image image">
-              <img src="/assets/images/services/bd4.svg" alt="" />
+          <div class="col-md-5 m-last">
+            <div class="step-image">
+              <img src="/assets/images/services/end-to-end/image-4.svg" alt="" />
+            </div>
           </div>
-               </div>
+          <div class="col-md-1"></div>
           <div class="col-md-6 m-first">
               <h5>TESTING & SUPPORT</h5>
               <p>Quality is the key for any product success, with a well-defined quality process we delivery the product or application that are ready for go-live.</p>
