--- a/src/app/components/services/front-end-development/development.component.html
+++ b/src/app/components/services/front-end-development/development.component.html
@@ -1,6 +1,6 @@
 <div class="searvice-jumbotron">
     <div class="container">
-        <div class="searvice-jumbotron-inner">
+        <!-- <div class="searvice-jumbotron-inner"> -->
             <div class="row">
                 <div class="col-md-5">
                     <h1><span class="highlight"> UI</span> DEVELOPMENT</h1>
@@ -19,30 +19,36 @@
                 </picture>
                 </div>
             </div>
-            <div class="row spacing">
+        <!-- </div> -->
+    </div>
+</div>
+
+<div class="spacing">
+    <div class="container">
+            <div class="row">
                 <div class="col-md-6">
                     <h5>BUSINESS <span class="highlight">UNDERSTANDING</span></h5>
                     <p>When it comes to selecting a platform it can be challenging, since that defines how the product can or cannot expand in future without technical boundaries. 
                         We strongly believe technology should aid a Product in scaling higher and not cripple the growth in any way. Based on the product vision and road map appropriate technology needs to be selected.</p>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-1"></div>
+                <div class="col-md-5">
                     <div class="step-image2 image">
-                        <img src="/assets/images/services/fd.svg" alt="" />
+                        <img src="/assets/images/services/ui-dev/image-2.svg" alt="" />
                     </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 
 <div class="service-step1">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+           <div class="col-12">
            <h5>PLATFORM EXPERTISE</h5>
-           <p></p>
-        </div>
-    </div>
+           <!-- <p></p> -->
+           </div>
+       </div>
         <div class="row">
             <ul class="list-icons">
                 <li>
@@ -51,7 +57,7 @@
                 </li>
                 <li>
                         <fa-icon [icon]="['fas','mobile-alt']"></fa-icon>
-                        <p>Mobile Apps</p>
+                        <p>Hybrid Mobile Apps</p>
                 </li>
                 <li>
                         <fa-icon [icon]="['fab','android']"></fa-icon>
@@ -73,12 +79,12 @@
 <div class="service-step2">
     <div class="container">
         <div class="row">
-            <div class="col-12">
-          <h5><span class="highlight">LANGUAGES & </span>FRAMEWORK <span class="highlight"></span></h5>
+          <div class="col-12">
+           <h5><span class="highlight">LANGUAGES & </span>FRAMEWORK <span class="highlight"></span></h5>
           <p>We choose the right framework to suite the business needs in terms: ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system.</p>
         </div>
         </div>
-        <h3></h3>
+        <!-- <h3></h3> -->
         <div class="row">
             <ul class="list-icons">
                 <li>
@@ -113,25 +119,30 @@
 <div class="service-step3">
     <div class="container">
         <div class="row">
-            <div class="col-12">
-           <h5>CODES MANAGEMENT</h5>
-        </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <p>We manage the code in Git repository with version control to allow multiple teams to colloborate in a distributed environment.</p>
+            <div class="col-md-5 m-first">
+                <h5>CODES MANAGEMENT</h5>
+                <p>We manage the code in Git repository with version control to allow multiple teams 
+                    to colloborate in a distributed environment.</p>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
-                <h5><span class="highlight">TESTING </span>& IMPLEMENTATION</h5>
-                    <p>We never settle for anything less than best, we iterate with the business and end-users to refine the interface periodically. 
-                        With focus on cross-platform and cross-browser testing to achieve the best results.</p>
-            </div>
-            <div class="col-md-6">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 m-last">
                 <div class="step-image">
-                    <img src="/assets/images/services/fd2.svg" alt="" />
+                    <img src="/assets/images/services/ui-dev/image-3.svg" alt="" />
                 </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5 m-last">
+                <div class="step-image">
+                    <img src="/assets/images/services/ui-dev/image-4.svg" alt="" />
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-6 m-first">
+                <h5><span class="highlight">TESTING </span>& IMPLEMENTATION</h5>
+                <p>We never settle for anything less than best, we iterate with the business and 
+                    end-users to refine the interface periodically. 
+                    With focus on cross-platform and cross-browser testing to achieve the best results.</p>
             </div>
         </div>
     </div>
