--- a/src/app/components/services/usability-testing/usability-testing.component.html
+++ b/src/app/components/services/usability-testing/usability-testing.component.html
@@ -1,8 +1,8 @@
 <div class="searvice-jumbotron">
   <div class="container">
-      <div class="searvice-jumbotron-inner">
+      <!-- <div class="searvice-jumbotron-inner"> -->
           <div class="row">
-              <div class="col-md-5">
+              <div class="col-md-6">
                   <h1><span class="highlight"> USABILITY </span> TESTING</h1>
                   <p>It’ll aid us to understand your objectives. We need to get to thebottom
                     of who you are, what you stand for and who you stand besid</p>
@@ -18,37 +18,52 @@
                   </div>
               </div>
           </div>
-          <div class="row spacing">
+        <!-- </div> -->
+    </div>
+</div>
+
+<div class="spacing">
+  <div class="container">
+          <div class="row">
             <div class="col-md-6">
-              <h6>UNDERSTANDING THE
-                PRODUCT <span class="highlight">PROTOTYPE</span></h6>
+              <h6>UNDERSTANDING THE</h6>
+                 <span class="highlight">PRODUCT PROTOTYPE</span>
               <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability
                 with standard technology, adaptability with emerging technologies and integration with back-end system</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
               <div class="step-image image">
-                <img src="/assets/images/services/ut2.svg" alt="" />
+                <img src="/assets/images/services/usability-testing/image-2.svg" alt="" />
               </div>
             </div>
           </div>
-      </div>
-  </div>
+    </div>
 </div>
 
 <div class="service-step2">
   <div class="container">
       <div class="row">
         <div class="col-md-5">
-        <h5><span class="highlight">CREATING SCENARIO </span>
+        <h5><span class="highlight">CREATING SCENARIO </span><br>
           FOR THE USERS</h5>
         </div>
         <div class="col-md-1"></div>
           <div class="col-md-6">
-            <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system</p>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Gurella Testing</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Remote based Testing</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Lab Based Testing</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Explolatory Testing</span></h6>
+            <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, 
+              interoperability with standard technology, adaptability with emerging technologies and 
+              integration with back-end system</p>
+              <div class="row">
+                <div class="col-sm-1">
+                  <img src="/assets/images/services/line.svg" />
+                </div>
+                <div class="col-sm-8">
+                  <h6><span> Gurella Testing</span></h6>
+                  <h6><span> Remote based Testing</span></h6>
+                  <h6><span> Lab Based Testing</span></h6>
+                  <h6><span> Explolatory Testing</span></h6>
+                </div>
+              </div>
           </div>
       </div>
   </div>
@@ -57,20 +72,33 @@
 <div class="service-step3">
   <div class="container">
       <div class="row">
-        <div class="col-md-12">
-         <h5>UNDERSTANDING THE <span class="highlight">USER BEHAVIOUR</span></h5>
-        </div>
-      </div>
-      <div class="row">
-          <div class="col-md-6">
-            <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system</p>
+          <div class="col-md-5 m-first">
+            <h5>UNDERSTANDING THE </h5>
+              <span class="highlight">USER BEHAVIOUR</span>
+            <p>We choose the right framework to suite the business needs in terms:ease of use, 
+              scalability, interoperability with standard technology, adaptability with emerging 
+              technologies and integration with back-end system</p>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-5 m-last">
+            <div class="step-image">
+              <img src="/assets/images/services/usability-testing/image-3.svg" />
+            </div>
           </div>
       </div>
       <div class="row">
-          <div class="col-md-6">
-          <h5>REPORT</h5>
-          <p>We choose the right framework to suite the business needs in terms:ease of use, scalability, interoperability with standard technology, adaptability with emerging technologies and integration with back-end system</p>
-               </div>
+          <div class="col-md-5 m-last">
+            <div class="step-image">
+              <img src="/assets/images/services/usability-testing/image-4.svg" />
+            </div>
+          </div>
+          <div class="col-md-1"></div>
+          <div class="col-md-5 m-first">
+            <h4>REPORT</h4>
+            <p>We choose the right framework to suite the business needs in terms:ease of use, 
+              scalability, interoperability with standard technology, adaptability with emerging 
+              technologies and integration with back-end system</p>
+        </div>
       </div>
   </div>
 </div>
