--- a/src/app/components/services/ux-consulting/ux-consulting.component.html
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.html
@@ -1,6 +1,5 @@
 <div class="searvice-jumbotron">
     <div class="container">
-        <div class="searvice-jumbotron-inner">
             <div class="row">
                 <div class="col-md-5">
                 <h1><span class="highlight">USER</span> EXPERIENCE</h1>
@@ -12,11 +11,10 @@
                 </div>
                 <div class="col-md-4">
                     <div class="step-image head">
-                        <img src="/assets/images/services/ux1.png" alt="" />
+                        <img src="/assets/images/services/user-experience/image-1.png" alt="" />
                         </div>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 
@@ -25,10 +23,8 @@
         <div class="row">
             <div class="col-12">
             <h5><span class="highlight">STAKEHOLDER </span>BUSINESS DISCUSSION</h5>
-        </div>
-            <div class="step-image">
-                <img src="/assets/images/services/ux2.svg" alt="" />
             </div>
+        </div>
             <div class="row">
             <div class="col-md-5">
                 <p>We start our requirements gathering from the pillars of the business; the Product Owners, Business SME, CEO/CTO to get their perspectives, needs & current process issues that they encounter and the potential areas of improvement. 
@@ -39,18 +35,24 @@
                 <p>On a broader scope the vision for the product and the market context gets defined. Next step would be SWAT Analysis on the competitors in the market.</p>
             </div>
             </div>
-        </div>
             <div class="row">
-                <div class="col-md-6">
+                <div class="col-md-5 m-last">
                     <div class="row">
-                        <div class="col-sm-6">
-                            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Stakeholder Interview</span></h6>
-                            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Business Requirement Gathering</span></h6>
+                        <div class="col-sm-1">
+                            <img src="/assets/images/services/line.svg" />
                         </div>
-                        <div class="col-sm-6">
-                            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Competitor Analysis</span></h6>
-                            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Affinity Mapping</span></h6>
+                        <div class="col-sm-8">
+                            <h6><span> Stakeholder Interview</span></h6>
+                            <h6><span> Business Requirement Gathering</span></h6>
+                            <h6><span> Competitor Analysis</span></h6>
+                            <h6><span> Affinity Mapping</span></h6>
                         </div>
+                </div>
+                </div>
+                <div class="col-md-1"></div>
+                <div class="col-md-5 m-first">
+                    <div class="step-image">
+                        <img src="/assets/images/services/user-experience/image-2.svg" alt="" />
                     </div>
                 </div>
             </div>
@@ -60,23 +62,42 @@
 <div class="service-step1">
     <div class="container">
         <div class="row">
-            <div class="col-12">
+        <div class="col-12">
             <h5><span class="highlight">DISCOVERING </span>USER PROBLEMS</h5>
         </div>
         </div>
         <div class="row">
-            <div class="col-md-6 m-first">
-                <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align according to the Vision of the Product. It takes a series of process to get the inference from the Research Data. Based on the inputs gleaned from the extensive research and analysis we plot the Journey Maps & Persona. 
+            <div class="col-md-5 m-first">
+                <p>We funnel the requirements from the Stakeholders, Business Team and the End-Users - align 
+                    according to the Vision of the Product. It takes a series of process to get the inference 
+                    from the Research Data. Based on the inputs gleaned from the extensive research and 
+                    analysis we plot the Journey Maps & Persona. 
                     This allowing us to Empathise with the end-users bringing value to the Design Strategy.</p>
-                <p>The Divergent & Convergent Thinking Process aims to unearth the innovative solutions and to nail the needs & challenges of the end-users & the business.</p>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> User Research</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> User Persona</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Users Journey Map</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Root Cause Analysis</span></h6>
             </div>
-            <div class="col-md-6 m-last">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 m-last">
+                <p>The Divergent & Convergent Thinking Process aims to unearth the innovative solutions 
+                    and to nail the needs & challenges of the end-users & the business.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-5">
                 <div class="step-image">
-                    <img src="/assets/images/services/ux3.svg" alt="" />
+                    <img src="/assets/images/services/user-experience/image-3.svg" alt="" />
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
+                <div class="row">
+                    <div class="col-sm-1">
+                        <img src="/assets/images/services/line.svg" />
+                    </div>
+                    <div class="col-sm-8">
+                        <h6><span> User Research</span></h6>
+                        <h6><span> User Persona</span></h6>
+                        <h6><span> Users Journey Map</span></h6>
+                        <h6><span> Root Cause Analysis</span></h6>
+                </div>
                 </div>
             </div>
         </div>
@@ -91,16 +112,25 @@
         </div>
         </div>
         <div class="row">
-           <div class="col-md-6 m-first">
-            <p>We combine the research and the insights to conceptualize to build the wireframes and iterate the prototypes with the business, technical team and the consumers.</p>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Conceptual Model</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Task Flow</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Card Sorting</span></h6>
-            <h6><img src="/assets/images/services/check.svg" alt="" /><span> Information Architecture</span></h6>
-        </div>
-        <div class="col-md-6 m-last">
+           <div class="col-md-5 m-first">
+            <p>We combine the research and the insights to conceptualize to build the wireframes and 
+                iterate the prototypes with the business, technical team and the consumers.</p>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <img src="/assets/images/services/line.svg" />
+                    </div>
+                    <div class="col-sm-8">
+                        <h6><span> Conceptual Model</span></h6>
+                        <h6><span> Task Flow</span></h6>
+                        <h6><span> Card Sorting</span></h6>
+                        <h6><span> Information Architecture</span></h6>
+                    </div>
+                </div>
+            </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-5 m-last">
             <div class="step-image">
-                <img src="/assets/images/services/ux4.svg" alt="" />
+                <img src="/assets/images/services/user-experience/image-4.svg" alt="" />
             </div>
         </div>
         </div>
@@ -115,18 +145,27 @@
         </div>
     </div>
             <div class="row">
-                <div class="col-md-6 m-first">
+                <div class="col-md-5 m-first">
                     <p>We value your time & effort, we employ Early Testing to avoid rework due to mismatch between the
                         users/market needs. We design Visual Prototype and test in multiple stages. Iterate design based on
-                        the feedback avoiding changes during the product development or even worse after market launch which could be very expensive for the business.</p>
-                    <h6><img src="/assets/images/services/check.svg" alt="" /><span> Low Fidelity Wireframe</span></h6>
-                    <h6><img src="/assets/images/services/check.svg" alt="" /><span> High Fidelity Wireframe</span></h6>
-                    <h6><img src="/assets/images/services/check.svg" alt="" /><span> Clickable Prototyping</span></h6>
-                    <h6><img src="/assets/images/services/check.svg" alt="" /><span> Iteration</span></h6>
+                        the feedback avoiding changes during the product development or even worse after market launch 
+                        which could be very expensive for the business.</p>
+                        <div class="row">
+                            <div class="col-sm-1">
+                                <img src="/assets/images/services/line.svg" />
+                            </div>
+                            <div class="col-sm-8">
+                                <h6><span> Low Fidelity Wireframe</span></h6>
+                                <h6><span> High Fidelity Wireframe</span></h6>
+                                <h6><span> Clickable Prototyping</span></h6>
+                                <h6><span> Iteration</span></h6>
+                            </div>
+                        </div>
                 </div>
-                <div class="col-md-6 m-last">
+                <div class="col-md-1"></div>
+                <div class="col-md-5 m-last">
                     <div class="step-image">
-                        <img src="/assets/images/services/ux5.svg" alt="" />
+                        <img src="/assets/images/services/user-experience/image-5.svg" alt="" />
                     </div>
                 </div>
             </div>
@@ -136,15 +175,24 @@
 <div class="service-step2">
     <div class="container">
         <div class="row">
-            <div class="col-md-6 m-first">
+            <div class="col-md-5 m-first">
               <h5>MARKET LAUNCH</h5>  
             </div>
-            <div class="col-md-6 m-last">
-                <p>With multiple iterations and checkpoints at various stages we ensure the prototype is ready for hassle freemarket development and market launch.</p>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Web Analytics</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> High Fidelity Wireframe</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Clickable Prototyping</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Iteration</span></h6>
+            <div class="col-md-1"></div>
+            <div class="col-md-5 m-last">
+                <p>With multiple iterations and checkpoints at various stages we ensure the prototype is 
+                    ready for hassle freemarket development and market launch.</p>
+                    <div class="row">
+                        <div class="col-sm-1">
+                            <img src="/assets/images/services/line.svg" />
+                        </div>
+                        <div class="col-sm-8">
+                            <h6><span> Web Analytics</span></h6>
+                            <h6><span> High Fidelity Wireframe</span></h6>
+                            <h6><span> Clickable Prototyping</span></h6>
+                            <h6><span> Iteration</span></h6>
+                        </div>
+                    </div>
             </div>
         </div>
     </div>
