--- a/src/app/components/services/visual-design/visual-design.component.html
+++ b/src/app/components/services/visual-design/visual-design.component.html
@@ -52,28 +52,37 @@
 <div class="service-step1">
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-        <h5>MOOD BOARD</h5>
-    </div>
-    </div>
+        <div class="col-md-12">
+            <h5>MOOD BOARD</h5>
+        </div>
+        </div>
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-5">
                 <p>We interview the stakeholder to understand the emotions and the  brand/product values. We look beyond the digital world to conceive ideas that reflect the business values & belief.</p>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
                 <p>Mood Board - a visual representation put across the table to convey or emote the Product ideas and build the theme for the application or product.</p>
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6 m-last">
+            <div class="col-md-5 m-last">
                 <h3>We define</h3>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Color</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Typography</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Components</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Illustrations</span></h6>
-                <h6><img src="/assets/images/services/check.svg" alt="" /><span> Logos</span></h6>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <img src="/assets/images/services/line-2.svg" />
+                    </div>
+                    <div class="col-sm-8">
+                        <h6><span> Color</span></h6>
+                        <h6><span> Typography</span></h6>
+                        <h6><span> Components</span></h6>
+                        <h6><span> Illustrations</span></h6>
+                        <h6><span> Logos</span></h6>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 m-first">
+            <div class="col-md-1"></div>
+            <div class="col-md-5 m-first">
                 <div class="step-image">
                     <img src="/assets/images/services/vd2.png" alt="Color Variation" />
                 </div>
@@ -94,13 +103,16 @@
                 <p>We come up with ample of variations for the product/brand and brainstorm with the stakeholders/business consultants and finalise the variations that most inspire the product/brand team.</p>
                 <p>Off the shelf typography may not be the solution for every company. Sometimes special products demand the special typography. We help you make the right choice of based on  legible, readable, and appeal when displayed across interfaces</p></div>
         </div>
-    </div>
-        <div class="col-12">
-     <div class="step-image step-image-res">
+    
+    <div class="row space">
+        <div class="col-md-12">
+        <div class="step-image step-image-res">
             <img src="/assets/images/services/vd4.png" class="img" alt="Color Variation" />
             <img src="/assets/images/services/vd9.png" class="over-img" alt="Color Variation" />
         </div>
         </div>
+    </div>
+</div>
 </div>
 
 <div class="service-step3">
@@ -358,7 +370,7 @@
         </div>
         <div class="row">
             <div class="step-image image-align">
-                <img src="/assets/images/services/vd17.png" alt="Interface" />
+                <img src="/assets/images/services/interface-design/vd17.png" alt="Interface" />
             </div>
             <div class="step-image image-align">
                 <img src="/assets/images/services/vd18.png" alt="Interface" />
