--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -109,10 +109,9 @@ header{
             }
             .step-icon{
                 text-align: center;
-                padding-left: 20px;
             img{
-                height: auto;
-                width: auto;
+                height: 60px;
+                width: 100%;
             }
         }
         }
