--- a/src/app/components/services/back-end-development/back-end-development.component.scss
+++ b/src/app/components/services/back-end-development/back-end-development.component.scss
@@ -6,14 +6,14 @@ h1{
     font-size: 50px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     line-height: 60px;
 }
 h5{
     font-size: 40px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .highlight{
     color: #60D6C9;
@@ -55,7 +55,19 @@ p{
         margin-bottom: 5px;
     }
     .spacing{
-        margin-top: 100px;
+        margin-top: 120px;
+        margin-bottom: 80px;
+        .highlight1{
+            font-size: 24px;
+            font-weight: 300;
+            text-align: left;
+            line-height: 20px;
+        }
+    }
+    .highlight1{
+        font-size: 24px;
+        font-weight: 300;
+        text-align: left;
     }
     .step-image1{
         p{
@@ -135,26 +147,29 @@ p{
     }
 }
 .service-step3{
-    background-color: #FFFFFF;
-    margin-top: 60px;
     h5{
         margin-top: 20px;
         font-size: 40px;
     }
+    .step-image img{
+        width: 100%;
+        height: auto;
+    }
     .row{
-        margin-bottom: 20px;
+        margin-bottom: 100px;
+        margin-top: 100px;
     }
 }
 
 @include media-breakpoint-down(md) {
     h1{
         font-size: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         line-height: 40px;
     }
     h5{
         font-size: 25px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
@@ -174,15 +189,26 @@ p{
             height: auto;
             margin-top: 50px;
         }
-        .step-image2 img{
+        .step-image2{
             margin-top: 30px;
+            text-align: center;
+            img{
+                width: 80%;
+                height: auto;
+            }
         }
     .spacing{
         margin-top: 50px;
+        .highlight1{
+            font-size: 17px;
+        }
     }
 }
 .service-step3{
-    margin-top: 10px;
+    .row{
+        margin-top: 30px;
+        margin-bottom: 60px;
+    }
     .m-first{
         order: 1;
     }
@@ -193,8 +219,13 @@ p{
         margin-top: 20px;
         font-size: 24px;
     }
-}
-.step-image img{
-margin-top: 30px;
+    .step-image{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        img{
+            width: 80%;
+            height: auto;
+        }
+        }
 }
 }
