--- a/src/app/components/services/usability-testing/usability-testing.component.scss
+++ b/src/app/components/services/usability-testing/usability-testing.component.scss
@@ -6,14 +6,13 @@ h1{
     font-size: 50px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
-    line-height: 60px;
+    margin-bottom: 10px;
 }
 h5{
     font-size: 40px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .highlight{
     color: #60D6C9;
@@ -37,46 +36,40 @@ p{
     font-weight: 300;
 }
 .searvice-jumbotron{
-     background-color: rgb(255, 255, 255); 
-     margin-top: -15px;
-    .head{
-        width:528px;
-        height:513px;
-        margin-left: -16px;
-    }
     h1{
         margin-top: 131px;
-    }
-    h6{
-        font-size: 40px;
-        font-weight: 300;
-        text-align: left;
-        margin-bottom: 30px;
-    }
-    img{
-        margin-bottom: 30px;
-    }
-    .step-image1{
-        p{
-            color: #797979;
-            font-size: 13px;
-            text-align: center;
-            margin-bottom: 28px;
-            margin-top: 14px; 
-        }
     }
     h3{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
         text-align: left;
+        margin-bottom: 30px;
+        .list{
+            margin-left: 35px;
+        }
+    }
+    .step-image{
+        img{
+        width: 110%;
+        height: auto;
+    }
+}
+}
+.spacing {
+    margin-top: 120px;
+    margin-bottom: 80px;
+    h6{
+        font-size: 24px;
+        font-weight: 300;
+        text-align: left;
         margin-bottom: 0px;
     }
-    .list{
-        margin-left: 35px;
-    }
-    .spacing {
-        margin-top: 200px;
+    .highlight{
+        font-size: 40px;
+        font-weight: 300;
+        text-align: left;
+        margin-bottom: 10px;
     }
     .step-image img{
         width: 100%;
@@ -107,30 +100,35 @@ p{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
-        margin-bottom: 16px;
-        img{
-            margin-bottom: 5px;
-            margin-right: 3px;
-        }   
+        margin-bottom: 30px;
     }
 
 }
 .service-step3{
-    background-color: #FFFFFF;
-    margin-top: 60px;
     h5{
+        font-size: 24px;
+        margin-bottom: 0;
         margin-top: 20px;
     }
-    .image{
-        filter: #606A74; 
-        -webkit-filter: grayscale(1);
+    h4{
+        font-size: 40px;
+        font-weight: 300;
+        text-align: left;
+        margin-bottom: 10px;
     }
-    .image:hover{
-        filter: none; 
-        -webkit-filter: grayscale(0);
+    .highlight{
+        font-size: 40px;
+        font-weight: 300;
+        text-align: left;
+        margin-bottom: 10px;
+    }
+    .step-image img{
+        width: 100%;
+        height: auto;
     }
     .row{
-        margin-bottom: 20px;
+        margin-bottom: 100px;
+        margin-top: 100px;
     }
 }
 
@@ -138,12 +136,12 @@ p{
     h1{
         font-size: 30px;
         text-align: left;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     h5{
         font-size: 24px;
         text-align: left;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         line-height: 32px;
     }
     p{
@@ -161,22 +159,25 @@ p{
         h3{
             font-size: 13px;
         }
-        h6{
-            font-size: 24px;
-            margin-bottom: 20px;
-            line-height: 32px;
-        }
-    .head{
-        width: 100%;
-        height: auto;
-        margin-left: 0px;
-    }
     .step-image img{
         width: 100%;
         height: auto;
     }
-    .spacing {
-        margin-top: 50px;
+}
+.spacing {
+    margin-top: 70px;
+    h6{
+        font-size: 17px;
+        margin-bottom: 0px;
+        line-height: 20px;
+    }
+    .highlight{
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .step-image img{
+        width: 80%;
+        height: auto;
     }
 }
 .service-step2{
@@ -189,18 +190,47 @@ p{
     }
     h6{
         font-size: 13px;
-        margin-bottom: 16px;
-        img{
-            width: 4%;
-            margin-bottom: 5px;
-            margin-right: 3px;
-        }   
+        margin-bottom: 31px;
+    }
+    .col-sm-1{
+        width: 10%;
+    }
+    .col-sm-8{
+        width: 90%;
     }
 }
 .service-step3{
-    margin-top: 20px;
     .row{
-        margin-bottom: 0px;
+        margin-top: 30px;
+        margin-bottom: 70px;
     }
+    .m-first{
+        order: 1;
+    }
+    .m-last{
+        order: 2;
+    }
+    h5{
+        font-size: 17px;
+        margin-bottom: 0;
+        margin-top: 20px;
+        line-height: 20px;
+    }
+    h4{
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .highlight{
+        font-size: 24px;
+        margin-bottom: 10px;
+    }
+    .step-image{
+        margin-top: 20px;
+        margin-bottom: 20px;
+        img{
+            width: 80%;
+            height: auto;
+        }
+        }
 }
 }
