--- a/src/app/components/services/ux-consulting/ux-consulting.component.scss
+++ b/src/app/components/services/ux-consulting/ux-consulting.component.scss
@@ -6,14 +6,13 @@ h1{
     font-size: 50px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
-    line-height: 60px;
+    margin-bottom: 10px;
 }
 h5{
     font-size: 40px;
     font-weight: 300;
     text-align: left;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 .highlight{
     color: #60D6C9;
@@ -23,7 +22,6 @@ p{
     font-size: 14px;
     text-align: justify;
     margin-bottom: 30px;
-    margin-top: 10px;
     font-weight: 300;
 }
 .service{
@@ -37,7 +35,7 @@ p{
     font-size: 12px;
     font-weight: 300;
 }
-.searvice-jumbotron-inner{
+.searvice-jumbotron{
     h1{
         margin-top: 100px;  
     }
@@ -61,54 +59,45 @@ h3{
 }
 
 .service-step{
-    background-color: #F4F4F4;
-    padding-top: 45px;
-    padding-bottom: 45px;
+    //background-color: #F4F4F4;
+    padding-top: 100px;
+    padding-bottom: 50px;
     p{
         color: #797979;
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
         margin-bottom: 30px;
-        margin-top: 30px;
+        margin-top: 10px;
     }
     h6{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
-        margin-bottom: 16px;
-        img{
-            margin-bottom: 5px;
-        }   
+        margin-bottom: 30px; 
      }
 }
 .service-step1{
-    background-color: #fff;
+    //background-color: #fff;
     padding-top: 45px;
     padding-bottom: 45px;
     h6{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
-        margin-bottom: 16px;
-        img{
-            margin-bottom: 5px;
-        }   
+        margin-bottom: 30px;
     }
 }
    
 .service-step2{
-    background-color: #F4F4F4;
+    //background-color: #F4F4F4;
     padding-top: 45px;
     padding-bottom: 45px;
     h6{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
-        margin-bottom: 16px;
-        img{
-            margin-bottom: 5px;
-        }  
+        margin-bottom: 30px;
     }
 }
 
@@ -120,7 +109,7 @@ h3{
     h5{
         font-size: 24px;
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
     .btn{
         font-size: 10px;
@@ -132,11 +121,20 @@ h3{
         color: #797979;
         font-size: 13px;
         text-align: justify;
-        margin-bottom: 30px;
-        margin-top: 10px;
+        margin-bottom: 20px;
         line-height: 20px;
     }
-    .searvice-jumbotron-inner{
+    .step-image{
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .col-sm-1{
+        width: 10%;
+    }
+    .col-sm-8{
+        width: 90%;
+    }
+    .searvice-jumbotron{
         h1{
             margin-top: 30px; 
         }
@@ -150,7 +148,7 @@ h3{
         img{
         width: 100%;
         height: auto;
-        margin-top: 50px;
+        margin-top: 10px;
         }
     }
     .list1{
@@ -165,9 +163,18 @@ h3{
     }
     
     .service-step{
-        background-color: #F4F4F4;
+        //background-color: #F4F4F4;
         padding-top: 35px;
-        padding-bottom: 45px;
+        padding-bottom: 20px;
+        .m-first{
+            order: 1;
+        }
+        .m-last{
+            order: 2;
+        }
+        h5{
+            margin-bottom: 0;
+        }
         p{
             color: #797979;
             font-size: 13px;
@@ -179,33 +186,18 @@ h3{
         h6{
             color: #6C6C6C;
             font-size: 13px;
-            margin-bottom: 16px;
-            padding-top: 10px;
-            img{
-                margin-bottom: 5px;
-                width: 4%;
-            }   
-         }
-         .row{
-            .row{
-                margin-left: 0;
-                margin-right: 0;
-             }
+            margin-bottom: 31px;
          }
     }
     .service-step1{
         padding-top: 10px;
-        padding-bottom: 40px;
+        padding-bottom: 50px;
         .m-first{
             order: 2;
             h6{
                 color: #6C6C6C;
                 font-size: 13px;
-                margin-bottom: 16px;
-                img{
-                    margin-bottom: 5px;
-                    width: 4%;
-                }   
+                margin-bottom: 31px;
             }
         }
         .m-last{
@@ -214,18 +206,14 @@ h3{
         }
        
         .service-step2{
-            padding-top: 30px;
-            padding-bottom: 30px;
+            padding-top: 0px;
+            padding-bottom: 80px;
             .m-first{
                 order: 1;
                 h6{
                     color: #6C6C6C;
                     font-size: 13px;
-                    margin-bottom: 16px;
-                    img{
-                        margin-bottom: 5px;
-                        width: 4%;
-                    }  
+                    margin-bottom: 31px;
                 }
             }
             .m-last{
@@ -233,11 +221,6 @@ h3{
                 h6{
                     color: #6C6C6C;
                     font-size: 13px;
-                    margin-bottom: 16px;
-                    img{
-                        margin-bottom: 5px;
-                        width: 4%;
-                    }  
                 }
             }
         }
