--- a/src/app/components/services/visual-design/visual-design.component.scss
+++ b/src/app/components/services/visual-design/visual-design.component.scss
@@ -20,14 +20,13 @@ h5{
 
 .searvice-jumbotron{
     background-color: #F7F5FF; 
-    margin-top: -15px;
+    //margin-top: -15px;
     h5{
         font-size: 50px;
         font-weight: 300;
         text-align: left;
-        margin-bottom: 30px;
+        //margin-bottom: 30px;
         margin-top: 125px;
-        line-height: 60px;
     }
     p{
         color: #797979;
@@ -54,6 +53,7 @@ h5{
         }
     }
     .list-icons{
+        text-align: center;
         list-style: none;
         padding: 0;
         li{
@@ -64,7 +64,7 @@ h5{
 }
 .service-step1{
     background-image: linear-gradient(#F7F5FF, #FFF);
-    margin-top: -15px;
+    //margin-top: -15px;
     h3{
         color:#6C6C6C;
         font-size: 20px;
@@ -73,17 +73,14 @@ h5{
     }
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         margin-top: 30px;
     }
     h6{
         color: #6C6C6C;
         font-size: 14px;
         font-weight: 300;
-        margin-bottom: 16px;
-        img{
-            margin-bottom: 5px;
-        }   
+        margin-bottom: 30px; 
     }
     p{
         color: #797979;
@@ -102,37 +99,37 @@ h5{
         text-align: left;
         color: #FFFFFF;
         margin-top: 30px;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
     }
     p{
         color: #FFFFFF;
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
-    .col-12 {
-        padding-left: 0px;
-        padding-right: 0px;
-
-    }
+    .step-image{
+        text-align: left;
     img{
         width: 1080px;
         height: 565px;
     }
+}
+.step-image{
     .over-img{
         position: absolute;
         top: -35%;
-        left: 65%;
+        left: 70%;
         width: 379px;
         height: 809px;
     }
+}
 }
 .service-step3{
     background-color: #FFFFFF;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         margin-top: 100px;
     }
     p{
@@ -204,7 +201,7 @@ h5{
     background-color: #151E36;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         color: #FFFFFF;
         margin-top: 50px;
     }
@@ -213,7 +210,7 @@ h5{
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     .image-align{
         text-align: center;
@@ -225,7 +222,7 @@ h5{
     margin-bottom: 30px;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         margin-top: 50px;
     }
     p{
@@ -239,7 +236,7 @@ h5{
     background-color: #F8F6FF;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         margin-top: 50px;
         color: #2D2D76;
     }
@@ -247,7 +244,7 @@ h5{
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     .image-align{
         text-align: center;
@@ -266,7 +263,7 @@ h5{
     padding-bottom: 50px;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         margin-top: 50px;
         color: #404040;
     }
@@ -274,7 +271,7 @@ h5{
         font-size: 14px;
         font-weight: 300;
         text-align: justify;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
     }
     .image{
         img{
@@ -289,7 +286,7 @@ h5{
     background-color: #DF3F6F;
     h5{
         text-align: left;
-        margin-bottom: 30px;
+        margin-bottom: 10px;
         color: #FFFFFF;
         margin-top: 50px;
     }
@@ -326,7 +323,7 @@ h5{
     .searvice-jumbotron{
         h5{
             font-size: 30px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             margin-top: 50px;
         }
         p{
@@ -347,9 +344,9 @@ h5{
             order: 2;
         }
         h5{
+            margin-top: 50px;
             font-size: 24px;
-            margin-bottom: 30px;
-            margin-top: 0;
+            margin-bottom: 10px;
         }
         p{
             font-size: 13px;
@@ -362,11 +359,13 @@ h5{
         }
         h6{
             font-size: 13px;
-            margin-bottom: 16px;
-            img{
-                width: 4%;
-                margin-bottom: 5px;
-            }   
+            margin-bottom: 31px;
+        }
+        .col-sm-1{
+            width: 10%;
+        }
+        .col-sm-8{
+            width: 90%;
         }
     }
     .service-step2{
@@ -379,10 +378,20 @@ h5{
             margin-bottom: 30px;
             line-height: 20px;
         }
+        .space{
+            .col-md-12{
+                padding-left: 0;
+                padding-right: 0;
+            }
+        }
+        .step-image{
+            text-align: left;
         img{
             width: 100%;
             height: auto;
         }
+    }
+    .step-image{
         .over-img{
             position: relative;
             top: 100%;
@@ -391,12 +400,13 @@ h5{
             width: 80%;
             height: auto;
             padding-left: 60px;
-        }  
+        }
+    }
     }
     .service-step3{
         h5{
             font-size: 24px;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             margin-top: 50px;
         }
         p{
@@ -411,7 +421,29 @@ h5{
         margin-top: 50px;
         margin-bottom: 30px;
     }
-    .list-icons{
+    .list-icons1{
+        padding: 3px;
+        list-style: none;
+        li{
+            display: inline-block;
+            padding: 10px;
+        }
+        fa-icon{
+            font-size: 25px;
+        }
+    }
+    .list-icons2{
+        padding: 3px;
+        list-style: none;
+        li{
+            display: inline-block;
+            padding: 10px;
+        }
+        fa-icon{
+            font-size: 25px;
+        }
+    }
+    .list-icons3{
         padding: 3px;
         list-style: none;
         li{
@@ -428,7 +460,7 @@ h5{
     padding-bottom: 0;
     h5{
         font-size: 24px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
         margin-top: 50px;
     }
     p{
@@ -440,11 +472,10 @@ h5{
 .service-step5{
     h5{
         font-size: 24px;
-        margin-bottom: 0px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
-        margin-top: 20px;
         margin-bottom: 20px;
         line-height: 20px;
     }
@@ -459,7 +490,7 @@ h5{
     h5{
         font-size: 24px;
         margin-top: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
@@ -471,7 +502,7 @@ h5{
     h5{
         font-size: 24px;
         margin-top: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
@@ -490,7 +521,7 @@ h5{
     h5{
         font-size: 24px;
         margin-top: 30px;
-        margin-bottom: 20px;
+        margin-bottom: 10px;
     }
     p{
         font-size: 13px;
